# AlgLW1

./: 1.py  1_5.py  2.py  3.py  4.py  6_7.py  8.py  pyproject.toml
